<resources>
    <string name="app_name">Qui-est-ce</string>
    <string name="start_game">Nouvelle partie</string>
    <string name="restart">Reprendre</string>
    <string name="option">Options</string>
    <string name="rules">Règles du jeu</string>
    <string name="exit">Quitter</string>
    <string name="player1Name">Veuillez entrer le nom du premier humain :</string>
    <string name="player2Name">Veuillez entrer le nom du deuxième humain :</string>
    <string name="cancel">Annuler</string>
    <string name="play">Jouer</string>
    <string name="returnP">Retour</string>
    <string name="language">Langues</string>
    <string name="display">Mode Jour/Nuit</string>
    <string name="fr">Français</string>
    <string name="en">Anglais</string>
    <string name="es">Espagnol</string>
    <string name="pt">Portuguais</string>
    <string name="player1NameVoid">Le premier humain n\'a pas de nom</string>
    <string name="player2NameVoid">Le deuxième humain n\'a pas de nom</string>
    <string name="player1EqualPlayer2">Le premier et le deuxième humain ne peuvent pas avoir le même nom</string>
    <string name="toYou">À vous de jouer</string>
    <string name="ready">Je suis prêt.e</string>
    <string name="yourTurn"> c\'est à ton tour de jouer</string>
    <string name="wait"> tu dois attendre ton tour</string>
    <string name="game_board">Plateau de jeu</string>
    <string name="nextTurn">Suivant</string>
    <string name="yourImg"> voici ton personnage</string>
    <string name="ok">OK</string>
    <string name="sameLang">Vous êtes déja en français</string>
    <string name="gg">Bravo !!</string>
    <string name="replay">Rejouer</string>
    <string name="proposed">Proposer</string>

</resources>