<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/home_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:fontFamily="@font/prisma"
        android:textSize="44dp"
        android:gravity="center"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_marginBottom="12dp"
        android:padding="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        android:gravity="center">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/trombone"
            android:layout_marginTop="-108dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="4dp">

            <Button
                android:id="@+id/btnFrench"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="@string/fr"
                android:textColor="@color/white"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="48dp"/>
            <Button
                android:id="@+id/btnEnglish"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:text="@string/en"
                android:textColor="@color/white"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="48dp"/>
            <Button
                android:id="@+id/btnSpanish"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:background="@color/yellow"
                android:text="@string/es"
                android:textColor="@color/white"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="48dp"/>
            <Button
                android:id="@+id/btnPortugues"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:background="@color/purple"
                android:text="@string/pt"
                android:textColor="@color/white"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="48dp"/>
            <Button
                android:id="@+id/btnReturn"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:background="@color/pink"
                android:text="@string/returnP"
                android:textColor="@color/white"
                android:layout_marginHorizontal="24dp"
                android:onClick="clicReturn"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>