<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/home_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toYou"
        android:fontFamily="@font/prisma"
        android:textSize="44dp"
        android:gravity="center"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_marginBottom="12dp"
        android:padding="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        android:gravity="center">

        <ImageView
            android:layout_width="148dp"
            android:layout_height="148dp"
            android:src="@drawable/trombone"
            android:layout_marginTop="-148dp"/>
        <LinearLayout
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/tName1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="38dp"
                android:background="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38dp"
                android:text="@string/yourTurn"
                android:background="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="48dp">
            <TextView
                android:id="@+id/tName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18dp"
                android:background="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/wait"
                android:background="@color/white"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="148dp">

            <Button
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:background="@color/purple"
                android:text="@string/exit"
                android:textColor="@color/white"
                android:layout_marginHorizontal="24dp"
                android:onClick="clicQuit"/>

            <Button
                android:onClick="ready"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="@string/ready"
                android:textColor="@color/white"
                android:layout_marginHorizontal="24dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>