<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/home_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toYou"
        android:fontFamily="@font/prisma"
        android:textSize="44dp"
        android:gravity="center"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_marginBottom="12dp"
        android:padding="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        android:gravity="center">
        <LinearLayout
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:id="@+id/tName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:background="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/yourImg"
                android:background="@color/white"
                android:layout_marginBottom="48dp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/perso"
            android:layout_width="300dp"
            android:layout_height="300dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp">

            <Button
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:background="@color/purple"
                android:text="@string/exit"
                android:textColor="@color/white"
                android:layout_marginHorizontal="24dp"
                android:onClick="clicReturn"/>

            <Button
                android:onClick="ready"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:layout_marginHorizontal="24dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>