<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gg"
        android:fontFamily="@font/prisma"
        android:textSize="60dp"
        android:layout_marginTop="96dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:padding="12dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gg"
        android:fontFamily="@font/prisma"
        android:textSize="72dp"
        android:layout_marginTop="96dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:padding="12dp"/>
    <ImageView
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:src="@drawable/trombone"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:background="@color/pink"
            android:onClick="clickQuit"/>
        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/replay"
            android:textColor="@color/white"
            android:background="@color/purple"
            android:layout_marginBottom="24dp"
            android:onClick="clickReplay"/>
    </LinearLayout>


</LinearLayout>

